[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/enviroment/BasicTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/NPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://dialogue/DialoguePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enviroment/Stairs.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/levels/Level1b.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/levels/Level1.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "EndAnimation"
length = 6.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.4 )
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reload_scene"
} ]
}

[node name="Level1" type="Node2D"]
script = ExtResource( 7 )

[node name="BasicTilemap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 524292, 0, 0, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 1, 524298, 0, 1, 524299, 0, 1, 524300, 0, 1, 524301, 0, 1, 524302, 0, 1, 524303, 0, 1, 524304, 0, 1, 524305, 0, 1, 524306, 0, 1, 524307, 0, 1, 524308, 0, 1, 524309, 0, 1, 524310, 0, 1, 524311, 0, 1, 524312, 0, 1, 524313, 0, 2, 589828, 0, 65536, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 0, 65537, 589849, 0, 65538, 655364, 0, 65536, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 262154, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 196618, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65538, 720900, 0, 65536, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65538, 786436, 0, 131072, 786437, 0, 131073, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 131073, 786442, 0, 131073, 786443, 0, 131073, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 131073, 786447, 0, 131073, 786448, 0, 131073, 786449, 0, 131073, 786450, 0, 131073, 786451, 0, 131073, 786452, 0, 131073, 786453, 0, 131073, 786454, 0, 131073, 786455, 0, 131073, 786456, 0, 131073, 786457, 0, 131074 )

[node name="Stairs" parent="." instance=ExtResource( 5 )]
position = Vector2( 376, 168 )
next_scene = ExtResource( 6 )

[node name="NPC" parent="." instance=ExtResource( 2 )]
position = Vector2( 280, 176 )

[node name="DialoguePlayer" parent="NPC" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_1/npc_1a.json"

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 104, 176 )
is_fire_use = false

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EndAnimation = SubResource( 1 )
[connection signal="last_dialogue_finished" from="NPC/DialoguePlayer" to="." method="_on_DialoguePlayer_last_dialogue_finished"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
